[package]
name = "wasm-combat-demo"
version = "0.1.0"
authors = ["Georgia Bains"]
description = "Demo of combat between two entities using wasm."
license = "none"
repository = "https://github.com/georgiabains/wasm-combat-demo"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.54"
